--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+ "scripts": {
+    "start": "react-scripts start ",
+    "build": "react-scripts build ",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "react-scripts start",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
